# portal

./: Cargo.toml  README.md  spec.md
.github/: CODEOWNERS
.github/workflows/: pin-check.yml  publish.yml  tests.yml
docs/: 00-overview.md  01-quickstart.md  02-concepts.md  03-portal-api.md  04-config-file.md  05-frame-video.md  06-tuning.md  07-rpc.md  08-e2ee.md  09-synchronization.md  10-lerobot.md  11-logging.md  12-wire-protocol.md  concepts.md  config-file.md  frame-video.md  lerobot.md  logging.md  portal-api.md  quickstart.md  synchronization.md
examples/python/basic/: _common.py  portal.yaml  robot.py  robot_yaml.py  teleoperator.py  teleoperator_yaml.py
examples/python/inference/: _common.py  policy.py  robot.py
examples/python/modal-mock-inference/: .env.example  README.md  policy.py  portal.yaml  pyproject.toml  robot.py
examples/python/so101/: README.md  _common.py  robot.py  teleoperator.py
livekit-portal/: Cargo.toml
livekit-portal-ffi/: Cargo.toml
livekit-portal-ffi/src/: lib.rs
livekit-portal/src/: codec.rs  config.rs  config_file.rs  data.rs  error.rs  frame_video.rs  lib.rs  metrics.rs  portal.rs  rtt.rs  serialization.rs  sync_buffer.rs  types.rs  video.rs
