[workspace]
members = ["livekit-portal", "livekit-portal-ffi"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
log = "0.4"
parking_lot = "0.12"
thiserror = "2"
tokio = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
